--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,7 +17,7 @@
 /* Sections */
 @import 'sections/sidebar';
 @import 'sections/topbar';
-@import 'sections/general-statistic';
+@import 'sections/pages-element';
 // @import 'section/registration_form';
 
 /* Pages / Views */
