--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -75,6 +75,7 @@
       color: $color-light;
       font-size: $font-size*1.2;
       transition: $transition;
+      // padding-left: 8px;
     }
   }
 }
@@ -163,7 +164,7 @@
 
     &:hover {
       i, a, p {
-        font-size: $font-size*1.1;
+        font-size: $font-size*0.9;
       }
     }
   }
