--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -4,7 +4,7 @@
 
 body {
   margin: 0 0;
-  padding: 0 20px;
+  padding: 0 0;
   max-width: 1250px;
   background: $color-light;
   font-family: $paragraph-font;
